# ALT-A0

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build_appl.sh  build_clean.sh
debugger/: ALT-A0.launch  MSP430G2553.ccxml
